Get all sites bug fix and Documentation updates
